fixed objects on smaller devices

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1{
     
 }
 .container #hallo-img{
-    position: fixed;
+    position: flex;
     right: 100px;
 }
 .content{
@@ -29,7 +29,6 @@ h1{
     left: 20%;
     position: absolute;
     transform: translateY(-50%);
-    color:  white;
     text-align: center;
     font-size: 30px;
 }
@@ -62,7 +61,7 @@ h1{
 .launch-time div p{
     font-size: 60px;
     margin-bottom: 14px;
-    color: rgb(255, 4, 0);
+    color: rgb(255, 20, 16);
     text-align: center;
 
 }
@@ -250,10 +249,9 @@ button {
 .alien-container img{
     width: 300px;
     padding-top: 10px;
-    padding-right: 10px;
-
-    position: relative;
-    left: 100px;
+    position: flex;
+    flex-direction: row-reverse;
+    
 }
 .alien-container div{
     text-align: center;
@@ -263,4 +261,32 @@ button {
 .alien-container a{
     position: absolute;
     right: 300px;
+}
+
+@media screen and (max-width:1200px){
+    .container{
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-size: cover;
+    }
+    .content{
+        font-size: 20px;
+        
+    }
+   .content h1{
+    font-size: 30px;
+    width: 50px;
+    
+   }
+    .content p{
+        
+    }
+
+   .launch-time{
+    flex-direction: column;
+   }
+    .alien-container{
+        display: none;
+    }
 }
